--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,10 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-
+  dio: ^5.8.0+1
+  flutter_secure_storage: ^9.2.4
+  logger: ^2.5.0
+  firebase_crashlytics: ^4.3.5
 
 dev_dependencies:
   flutter_test:
