--- a/ios/Flutter/devRelease.xcconfig
+++ b/ios/Flutter/devRelease.xcconfig
@@ -1,2 +1,6 @@
 #include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.release.xcconfig"
 #include "Generated.xcconfig"
+
+ASSET_PREFIX=dev
+BUNDLE_NAME=Configs Dev
+BUNDLE_DISPLAY_NAME=Configs Dev
