--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,16 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   logger: ^2.5.0
   firebase_crashlytics: ^4.3.5
+  flutter_local_notifications: ^19.2.1
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+
+
 
 
 flutter:
